--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 ## JPA Props
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
+
+## MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/star_trek?serverTimezone=UTC
+spring.datasource.username=root
+#spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
